<?xml version="1.0" encoding="utf-8"?>
<!--
    * Copyright (C) 2015 Vishal Dubey (vishal_android freak) (yzvishal.vd@gmail.com)
    *
    * Licensed under the Apache License, Version 2.0 (the "License");
    * you may not use this file except in compliance with the License.
    * You may obtain a copy of the License at
    *
    *      http://www.apache.org/licenses/LICENSE-2.0
    *
    * Unless required by applicable law or agreed to in writing, software
    * distributed under the License is distributed on an "AS IS" BASIS,
    * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
    * See the License for the specific language governing permissions and
    * limitations under the License.
    -->

<resources>
    <string name="app_name">Fusion Control</string>
    <string name="double_tap">Double Tap</string>
    <string name="swipe_up">Swipe Up</string>
    <string name="swipe_down">Swipe Down</string>
    <string name="swipe_right">Swipe Right</string>
    <string name="swipe_left">Swipe Left</string>
    <string name="draw_e">Draw \'E\'</string>
    <string name="draw_o">Draw \'O\'</string>
    <string name="draw_w">Draw \'W\'</string>
    <string name="draw_c">Draw \'C\'</string>
    <string name="draw_m">Draw \'M\'</string>
    <string name="card_title">Gesture Wakeups</string>
    <string name="action_about">About</string>
    <string name="title_activity_about">About</string>
    <string name="open">Fusion Control is licensed under the Apache License, Version 2.0. More about License on my Github</string>
    <string-array name="nav_draw_list">
        <item>Gestures</item>
        <item>About</item>
    </string-array>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_launch">Launch Activity</string>

</resources>
